Resolve gap between nav and dashboard sections
Gap was appearing between nav and dashboard sections when screen reached 768px breakpoint, resolved it by overriding dashboard and footer margin-left with css !important

--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,11 @@ a {
   grid-area: footer;
   border: solid 2px blue;
 }
+@media (min-width: 768px) {
+  .footer {
+    margin-left: 0 !important;
+  }
+}
 
 .header {
   background: #7476bf;
@@ -508,6 +513,7 @@ a {
     display: grid;
     grid-template-columns: 50%;
     grid-template-rows: auto;
+    margin-left: 0 !important;
   }
 }
 
