--- a/scss/components/_dashboard.scss
+++ b/scss/components/_dashboard.scss
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: 50%;
     grid-template-rows: auto;
+    margin-left: 0 !important;
   }
 }
 
